syntax = "proto3";

package grpc;

option go_package = "github.com/direktiv/direktiv/pkg/secrets/grpc";

message SecretsStoreRequest {
	optional string namespace = 1;
	optional string name = 2;
	optional bytes data = 3;
}

message SecretsRetrieveRequest {
	optional string namespace = 1;
	optional string name = 2;
}

message SecretsDeleteRequest {
	optional string namespace = 1;
	optional string name = 2;
}

message SecretsDeleteResponse {
	optional int32 count = 1;
}

message SecretsRetrieveResponse {
	optional bytes data = 3;
}

message GetSecretsRequest {
	optional string namespace = 1;
}

message GetSecretsResponse {
	message Secret {
		optional string name = 1;
	}
	repeated Secret secrets = 1;
}

message DeleteSecretsRequest {
	optional string namespace = 1;
}
